Fixed spacing for default screen zoom

--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ nav {
 
 #title-text {
   align-items: center;
-  max-width: 45vw;
+  max-width: 50vw;
 }
 
 #about-me {
